Configure linting and editor settings
- Update .gitignore to include `logs/`, `.vscode/`, and `test/`
- Update .vscode/settings.json to disable pylint linting, enable flake8 linting, increase font size to 18, disable quick suggestions and parameter hints, add bypass execution policy to windows shell args, set python path to venv, set restructuredtext conf path to workspace folder, and disable restructuredtext linter

[.gitignore]
- Remove `XEditLib` from `.gitignore`
- Remove `__init__.py` from `.gitignore`
- Add `logs/` and `.vscode/` to `.gitignore`
- Add `test/` to `.gitignore`
[.vscode/settings.json]
- Disable pylint linting
- Enable flake8 linting
- Increase font size to 18
- Disable quick suggestions and parameter hints
- Add bypass execution policy to windows shell args
- Set python path to venv
- Set restructuredtext conf path to workspace folder
- Disable restructuredtext linter

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 .eggs*
 *egg-info
 .pytest_cache*
-XEditLib
 venv
 xelib_log.txt
 vim*
@@ -15,7 +14,8 @@ docs/_build
 /PYPI_TOKEN
 /build
 /dist
-__init__.py
 .vimspector.json
 localsettings.lua
-launch.json
+logs/
+.vscode/
+test/
